fix filter collapse transitions

--- a/app/assets/style/components/_bottom-modal.scss
+++ b/app/assets/style/components/_bottom-modal.scss
@@ -5,7 +5,10 @@
 
     background: #000000DE;
     border-radius: 8px 8px 0px 0px;
-    padding: 24px 16px;
 
     z-index: 1020;
+}
+
+.bottom-modal-wrapper {
+    padding: 24px 16px;
 }
