--- a/app/assets/style/configs/bootstrap/_variables.scss
+++ b/app/assets/style/configs/bootstrap/_variables.scss
@@ -36,3 +36,6 @@ $border-radius-lg:              8px;
 // Navbars
 $navbar-dark-brand-color:       #fff; 
 $navbar-dark-color:             #fff; 
+
+// Animation
+$transition-collapse:         height .4s ease !default
